mock java ArrayList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ include_directories("include")
 file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
 foreach(file ${files})
     get_filename_component(name ${file} NAME)
-    add_executable(${name} ${file} src/algo_utils.c)
+    add_executable(${name} ${file}
+            src/algo_utils.c
+            src/struct_list.c
+            )
     target_compile_definitions(${name} PUBLIC DEBUG)
 endforeach()
