modify List to ArrayList

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ foreach(file ${files})
     get_filename_component(name ${file} NAME)
     add_executable(${name} ${file}
             src/algo_utils.c
-            src/struct_list.c
+            src/struct_array_list.c
             )
     target_compile_definitions(${name} PUBLIC DEBUG)
 endforeach()
